src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVBindlessTexture_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVBindlessTexture_StringErrorContext.class */
public final class NVBindlessTexture_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glGetTextureHandleNV(I)J", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glGetTextureSamplerHandleNV(II)J", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glMakeTextureHandleResidentNV(J)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glMakeTextureHandleNonResidentNV(J)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glGetImageHandleNV(IIZII)J", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glMakeImageHandleResidentNV(JI)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glMakeImageHandleNonResidentNV(J)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glUniformHandleui64NV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("nglUniformHandleui64vNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glUniformHandleui64vNV(ILjava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glProgramUniformHandleui64NV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("nglProgramUniformHandleui64vNV(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glProgramUniformHandleui64vNV(IILjava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glIsTextureHandleResidentNV(J)Z", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glIsImageHandleResidentNV(J)Z", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glUniformHandleui64vNV(I[J)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        methods.put("glProgramUniformHandleui64vNV(II[J)V", "net/labymod/core/laby3d/opengl/error/generated/NVBindlessTextureErrorContext");
        return methods;
    }
}
